--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,13 +12,16 @@
         >
       
       </li>
+      <li class="nav-item" style="margin-top: 3px; margin-left: 10px;">
+        <a class="nav-link text-black fs-5" href="#">|  Skype</a>
+      </li>
 
     </ul>
-<div class  = "float-start">
-    <ul class="nav nav-pills" >
-
+<div style  = "float:left; margin-top: 5px">
+    <ul class="nav nav-pills; text-start" >
+      
       <li class="nav-item">
-        <a class="nav-link text-black" href="#">Skype</a>
+        <a class="nav-link text-black text-start" href="#">Skype</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-black " href="#">Downloads</a>
