--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       
       </li>
       <li class="nav-item" style="margin-top: 3px; margin-left: 10px;">
-        <a class="nav-link text-black fs-5" href="#">|  Skype</a>
+        <a class="nav-link text-black fs-5" routerLink = "/home">|  Skype</a>
       </li>
 
     </ul>
@@ -24,7 +24,7 @@
         <a class="nav-link text-black text-start" href="#">Skype</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black " href="#">Downloads</a>
+        <a class="nav-link text-black " routerLink = "/downloads">Downloads</a>
       </li>
 
       <li class="nav-item">
