--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,1 @@
-
-<div style="margin: 10px;">
-<app-navbar>Loading top  nav bar</app-navbar>
-
-<app-banner></app-banner>
-
-<div style="text-align: center; font-size:xx-large; padding-top: 30px; padding-bottom: 30px;" >Discover More Features</div>
-
-<app-cards></app-cards>
-
-
-<h2 class="" style="text-align: center;">Try Skype in your browser</h2>
-<h3 style="text-align: center; font-size: medium;">No installations needed.</h3>
-
-
-
-
-
-
-<app-footer></app-footer>
+<app-layout></app-layout>
