Added routing to 4 elements, downloads, the home skype button in the top left, the signout function in the top right, and the first card in the card carousel.

--- a/src/app/components/Routing/downloads.components.html
+++ b/src/app/components/Routing/downloads.components.html
@@ -3,6 +3,14 @@
     Download Skype
     
 </div>
-<button type="button" class="btn btn-primary btn-floating">
-    <i class="fas fa-download"></i>
-</button>
+<div style ="text-align: center;">
+
+<div style="text-align: center;">
+<a href="https://discord.com/download" 
+class="button"
+class="btn btn-outline-dark btn-rounded"
+
+>
+Download Skype
+</a>
+</div>
