--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -7,10 +7,11 @@
         alt="..."
       />
       <div class="card-body">
-        <h5 class="card-title">mmm </h5>
+        <h5 class="card-title">Be a Super Hero on your next Skype call  </h5>
         <p class="card-text">
           We’re joining forces with Marvel Studios’ to bring epic Shang-Chi and The Legend of The Ten Rings backgrounds to your video calls (for a limited time only).
         </p>
+        <a routerLink="/card_one" class="button">Learn More</a>
       </div>
     </div>
   </div>
