--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     <ul class="nav nav-pills; text-start" >
       
       <li class="nav-item">
-        <a class="nav-link text-black text-start" href="#">Skype</a>
+        <a class="nav-link text-black text-start" routerLink = "/home">Skype</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-black " routerLink = "/downloads">Downloads</a>
@@ -75,7 +75,7 @@
       >
         <li><a class="dropdown-item" href="#">My Account</a></li>
         <li><a class="dropdown-item" href="#">Use Skype Online</a></li>
-        <li><a class="dropdown-item" href="#">Sign out</a></li>
+        <li><a class="dropdown-item" routerLink = "/signout">Sign out</a></li>
       </ul>
     </div>
   </nav>
