--- a/src/app/components/download-cards.html
+++ b/src/app/components/download-cards.html
@@ -2,7 +2,7 @@
 <img src = {{imagePath}} class="card-img-top" alt = "...">
 <div class="card-body text-white">
 <h6 class="card-title">{{title}}</h6>
-<p class="card-text">By {{uurl}}</p>
+<p class="card-text">{{uurl}}</p>
 </div>
 
 </div>
