--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,7 @@
         <a class="nav-link text-black" href="#">Skype to Phone</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black" href="#">Skype Number</a>
+        <a class="nav-link text-black" routerLink = "/numbers">Skype Number</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-black" href="#">Features</a>
