--- a/src/app/components/Routing/numbers.components.html
+++ b/src/app/components/Routing/numbers.components.html
@@ -8,7 +8,7 @@
         <div class="fw-bold">{{myInfo.Name1}} </div>
         {{myInfo.Number1}}
       </div>
-      <span class="badge bg-primary rounded-pill">14</span>
+      <span></span>
     </li>
     <li class="list-group-item d-flex justify-content-between align-items-start">
       <div class="ms-2 me-auto">
@@ -24,3 +24,15 @@
 
 </div> 
 
+<i class="fas fa-camera fa-xs"></i>
+<i class="fas fa-camera fa-sm"></i>
+<i class="fas fa-camera fa-lg"></i>
+<i class="fas fa-camera fa-2x"></i>
+<i class="fas fa-camera fa-3x"></i>
+<i class="fas fa-camera fa-4x"></i>
+<i class="fas fa-camera fa-5x"></i>
+<i class="fas fa-camera fa-6x"></i>
+<i class="fas fa-camera fa-7x"></i>
+<i class="fas fa-camera fa-8x"></i>
+<i class="fas fa-camera fa-9x"></i>
+<i class="fas fa-camera fa-10x"></i>
