Updated info for assignment 8, added service to send data to backend and for that data to update the main page

--- a/src/app/components/Routing/numbers.components.html
+++ b/src/app/components/Routing/numbers.components.html
@@ -10,13 +10,13 @@
       </div>
       <span></span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start">
+    <!-- <li class="list-group-item d-flex justify-content-between align-items-start">
       <div class="ms-2 me-auto">
         <div class="fw-bold">{{myInfo.Name2}}</div>
         {{myInfo.Number2}}
       </div>
       <span ><i class="fas fa-phone"></i></span>
-    </li>
+    </li> -->
   
   
   </ol>
@@ -24,3 +24,4 @@
 
 </div> 
 
+<edit-user-info>edit</edit-user-info>
