Added Firebase authentication support, top right Button 'account' and then 'Sign in' Leads to the login page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -67,7 +67,7 @@
         aria-expanded="true"
         id="dropDownMenuButton1"
       >
-        Gregory Farley
+        Account
       </button>
       <ul
         class="dropdown-menu dropdown-menu-dark"
@@ -75,7 +75,7 @@
       >
         <li><a class="dropdown-item" href="#">My Account</a></li>
         <li><a class="dropdown-item" href="#">Use Skype Online</a></li>
-        <li><a class="dropdown-item" routerLink = "/signout">Sign out</a></li>
+        <li><a class="dropdown-item" routerLink = "/auth">Sign In</a></li>
       </ul>
     </div>
   </nav>
